--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>Three</title>
-  <base href="/">
+  <base href="/three.github.io/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>body,html{padding:0;margin:0;width:100%;height:100%}</style><link rel="stylesheet" href="styles.85cd64f0102b130c.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.85cd64f0102b130c.css"></noscript></head>
